--- a/style.css
+++ b/style.css
@@ -40,7 +40,8 @@ h1 {
     justify-content: center;
 }
 input {
-    margin-left: 20px;
+    margin-left: 24px;
+    width: 164px;
     padding: 10px;
     border: none;
     font-family: 'Sunflower', sans-serif;
@@ -69,7 +70,7 @@ h3{
 }
 p {
     margin-left: 40px;
-    margin-top: 100px;
+    margin-top: 200px;
     padding: 5px;
     font-size: 0;
 }
@@ -114,6 +115,7 @@ p {
 }
 #watch {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     background-color: #d3c5ce;
 }
@@ -132,4 +134,40 @@ p {
 .open {
     text-transform: uppercase;
     color: rgb(144, 2, 2);
+}
+
+
+/*  */
+@media all and (max-width: 767px) {
+.selected h3 { 
+    font-size: 24px;
+}
+}
+
+/*  */
+@media all and (max-width: 480px) {
+.bigBox {
+    flex-direction: column;
+}
+}
+
+/*  */
+@media all and (max-width: 414px) {
+.formBox {
+    width: 332px;
+}
+input {
+    margin-left: 8px;
+}
+textarea {
+    width: 180px;
+    margin-left: 8px;
+}
+}
+
+/*  */
+@media (max-width: 414px) {
+.formBox {
+    width: 240px;
+}
 }
